tests/idris2/casetree/casetree001/expected
1/1: Building Issue762 (Issue762.idr)
1/1: Building IsS (IsS.idr)
Error: While processing left hand side of fail. Can't match on S (Under-applied constructor).

IsS:31:14--31:15
 27 | --              ^ forced by Refl
 28 |
 29 | -- If you don't: too bad!
 30 | fail : IsS s -> s === S
 31 | fail (Indeed S eq) = eq
                   ^

